# smart-proxy

./: .gitignore  CMakeLists.txt  Cargo.toml  README.md  RELEASE.md  TUI_REVISION_COMPLETE.md  TUI_REVISION_DOCS.md  build.bat  build.sh  cli.cpp  cli.h  config.cpp  config.h  config.json  dns.cpp  dns.h  health.cpp  health.h  logger.cpp  logger.h  main.cpp  network.cpp  network.h  proxy.cpp  proxy.h  proxy_config.json  routing.cpp  routing.h  runway.h  runway_manager.cpp  runway_manager.h  smart_proxy.py  test_tui.sh  tracker.cpp  tracker.h  tui.cpp  tui.h  tui_input.cpp  utils.cpp  utils.h  (+7 more)
.github/workflows/: build.yml  release.yml
src/: config.rs  dns.rs  health.rs  lib.rs  proxy.rs  routing.rs  runway.rs  runway_manager.rs  tracker.rs  validator.rs
