[package]
name = "smartproxy"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "service"
path = "src/bin/service.rs"

[[bin]]
name = "cli"
path = "src/bin/cli.rs"

[lib]
name = "smartproxy"
path = "src/lib.rs"

[dependencies]
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json", "socks", "stream"] }
hyper = { version = "1.0", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
http-body-util = "0.1"
trust-dns-resolver = { version = "0.23", features = ["tokio-runtime", "dns-over-https"] }
ipnetwork = "0.20"
clap = { version = "4.4", features = ["derive"] }
log = "0.4"
env_logger = "0.11"
anyhow = "1.0"
thiserror = "1.0"
async-trait = "0.1"
dashmap = "5.5"
chrono = "0.4"
futures = "0.3"
parking_lot = "0.12"
get_if_addrs = "0.10"
url = "2.5"
